troubleshooting img height issue displaying on mobile devices but not on devtools mobile view

--- a/src/components/pages/projects/styles.scss
+++ b/src/components/pages/projects/styles.scss
@@ -70,16 +70,9 @@
         }
     }
 
-    img {
-        height: auto;
-        max-width: 500px;
-        margin: auto 50px;
+    // img {
         
-        @media (max-width: 1350px) {
-            width: 98%;
-            margin: auto;
-        }
-    }
+    // }
 
     p, h3 {
         color: #fff;
@@ -93,8 +86,14 @@
 }
 
 .project-item-img-thumb {
-    width: 100%;
     height: auto;
+    max-width: 500px;
+    margin: auto 50px;
+    
+    @media (max-width: 1350px) {
+        width: 98%;
+        margin: auto;
+    }
 }
 
 .project-info {
